[gd_scene load_steps=3 format=3 uid="uid://bl6c3k3o1h1ru"]

[ext_resource type="Script" path="res://user_interface/menu/components/button/ui_button.gd" id="1_f3neg"]
[ext_resource type="Script" path="res://user_interface/difficulty_selection_menu/difficulty_selection_menu.gd" id="1_oekna"]

[node name="DifficultySelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oekna")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Separator" type="Control" parent="MarginContainer/Menu"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 52
text = "Difficulty Selection"
horizontal_alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/Menu"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="EasyModeButton" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Easy "
script = ExtResource("1_f3neg")

[node name="NormalModeButton" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Normal "
script = ExtResource("1_f3neg")

[node name="HardModeButton" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Hard"
script = ExtResource("1_f3neg")

[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/EasyModeButton" to="." method="onEasyModeButtonPressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/NormalModeButton" to="." method="onNormalModeButtonPressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/HardModeButton" to="." method="onHardModeButtonPressed"]
